# ML-Projects

./: README.md  rag.py
CIFAR-10 Image Classification Site/: Classifier Model  README.md  StreamlitApp.py
Document Management with Q&A/: rag.py
Drone Recognition and Tracking/: README.md  main.py  pyproject.toml  tracker.py  tracker_video.py
Face Recognition System/: README.md  face_recog.py
Invoice Information Extractor/: README.md  image_info_extractor.py  main_code.py
Multimodal RAG/: README.md
Stock Price Predictor/: LSTM_model.py  README.md  Stock_price_predictor.py  predictor_model.keras
